--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22wcKIbh01%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22NaBrOmzf%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWfwsXVNiOAvqtkE6WmLZ5BpsxwmKpoDR_Czlim4up3yeOcBFZk.Bn_fCK..AAA.0.0.BoMB9v.AWc5LBFq_T6YIi9xGyh-hMSeL9A",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "xs",
-        "value": "9%3AA-_UavjL-UQ8KQ%3A2%3A1747984239%3A-1%3A-1",
+        "value": "6%3A-1KcFSjTFXz4cQ%3A2%3A1749096261%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWdJE2-duZSlrcp76Ow0F5h2TJn0-eclgmZtMZmjUkZ7qh93Zdk.Bn_fCK..AAA.0.0.BoQRdI.AWc78C0xKDCyQ62ddghdqnc-fvY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "fbl_st",
-        "value": "101235484%3BT%3A29133070",
+        "value": "101039467%3BT%3A29151604",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2827%3Btimestamp%3A1747984245",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749096264",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-23T07:11:01.384Z",
-        "lastAccessed": "2025-05-23T07:11:01.384Z"
+        "creation": "2025-06-05T04:04:39.061Z",
+        "lastAccessed": "2025-06-05T04:04:39.061Z"
     }
 ]
