--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "locale",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "c_user",
@@ -86,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "xs",
@@ -95,34 +77,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdJE2-duZSlrcp76Ow0F5h2TJn0-eclgmZtMZmjUkZ7qh93Zdk.Bn_fCK..AAA.0.0.BoQRdI.AWc78C0xKDCyQ62ddghdqnc-fvY",
+        "value": "0MmXGi5OoGPsKoWdq.AWeoVq0iVvVEmhF8bVeREK0oUdK_KPFBG6jEEAKfA-QV8ZT9Y7M.Bn_fCK..AAA.0.0.BoQaR3.AWc8OFUPeSihUhmWx7yd1jtMFB4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101039467%3BT%3A29151604",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749096264",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749132407",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T04:04:39.061Z",
-        "lastAccessed": "2025-06-05T04:04:39.061Z"
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100739392%3BT%3A29152212",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T14:12:14.809Z",
+        "lastAccessed": "2025-06-05T14:12:14.809Z"
     }
 ]
