--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "xs",
@@ -77,52 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWeoVq0iVvVEmhF8bVeREK0oUdK_KPFBG6jEEAKfA-QV8ZT9Y7M.Bn_fCK..AAA.0.0.BoQaR3.AWc8OFUPeSihUhmWx7yd1jtMFB4",
+        "value": "0MmXGi5OoGPsKoWdq.AWeIOToqnKanBnDwAJ9iAsMHGwFM9LO3oKTB43A_KtDSOWc_KEQ.Bn_fCK..AAA.0.0.BoQiiL.AWdxGW49SIOKjVvjuyYaqBIqGD4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749132407",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     },
     {
         "key": "fbl_st",
-        "value": "100739392%3BT%3A29152212",
+        "value": "100726906%3BT%3A29152770",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:12:14.809Z",
-        "lastAccessed": "2025-06-05T14:12:14.809Z"
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749166219",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T23:30:27.012Z",
+        "lastAccessed": "2025-06-05T23:30:27.012Z"
     }
 ]
