--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22NaBrOmzf%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22NaBrOmzf%22%2C%2261575070664257%22%3A%22BAe3rsmF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,53 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575070664257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
+    },
+    {
+        "key": "xs",
+        "value": "13%3A5WFgWKxBqYmHCg%3A2%3A1749405344%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWcLPFdQZ4LabooSJ2JSZGVZD07sCxiLZC7dfcDfeqSynB_MdW4.Bn_fCK..AAA.0.0.BoRc6k.AWc0GByjDBDGBWrkRglmS7n6-js",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "locale",
@@ -59,52 +104,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575300662779",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
-    },
-    {
-        "key": "xs",
-        "value": "6%3A-1KcFSjTFXz4cQ%3A2%3A1749096261%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWeIOToqnKanBnDwAJ9iAsMHGwFM9LO3oKTB43A_KtDSOWc_KEQ.Bn_fCK..AAA.0.0.BoQiiL.AWdxGW49SIOKjVvjuyYaqBIqGD4",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "fbl_st",
-        "value": "100726906%3BT%3A29152770",
+        "value": "100720754%3BT%3A29156755",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749166219",
+        "value": "v2%3Bclient_version%3A2839%3Btimestamp%3A1749405349",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T23:30:27.012Z",
-        "lastAccessed": "2025-06-05T23:30:27.012Z"
+        "creation": "2025-06-08T17:56:38.982Z",
+        "lastAccessed": "2025-06-08T17:56:38.982Z"
     }
 ]
