--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "dpr",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWeB442qJsAhyIFcNXLT3jgmGN6ka1XDaGIsgqO45yZV4oXinyc.Bn_fCK..AAA.0.0.BoSH-j.AWcdaxruvDKxyGeUlKMtz0lJC7I",
+        "value": "0MmXGi5OoGPsKoWdq.AWeUQaD1ka3ERkwAKrJU9R1v5PCGaHoCVGTIvkZOnGgW3OEx9-0.Bn_fCK..AAA.0.0.BoSJNU.AWewQZSpoR7qhgBGBtYgeZk6dJE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "fbl_st",
-        "value": "101520457%3BT%3A29159695",
+        "value": "101523916%3BT%3A29159779",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2842%3Btimestamp%3A1749581732",
+        "value": "v2%3Bclient_version%3A2842%3Btimestamp%3A1749586772",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-10T18:55:48.564Z",
-        "lastAccessed": "2025-06-10T18:55:48.564Z"
+        "creation": "2025-06-10T20:20:07.047Z",
+        "lastAccessed": "2025-06-10T20:20:07.047Z"
     }
 ]
